change hardcoded "admin" -> {{universal_var["service_tenant_id"]}} var

--- a/templates/skadmin/initialLoad/tapis-apps-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-apps-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "servicepwd":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "apps",
                 "secretName": "password",
                 "password":   "<generate-secret>",
@@ -12,7 +12,7 @@
         ],
         "dbcredential":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "tapis",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
@@ -23,7 +23,7 @@
                 "kubeSecretKey":  "postgres-password"
             },
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "tapis",
                 "secretName": "passwords",
                 "dbservice":  "pgadmin",
