--- a/templates/skadmin/initialLoad/tapis-meta-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-meta-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "servicepwd":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "meta",
                 "secretName": "password",
                 "password":   "<generate-secret>",
@@ -12,7 +12,7 @@
         ],
         "dbcredential":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "restheart",
                 "secretName": "passwords",
                 "dbservice":  "mongo",
