--- a/templates/skadmin/initialLoad/tapis-sk-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-sk-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "dbcredential":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "tapis",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
@@ -13,7 +13,7 @@
                 "kubeSecretKey":  "tapis-postgres-password"
             },
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "postgres",
                 "secretName": "passwords",
                 "dbservice":  "postgres",
@@ -24,7 +24,7 @@
                 "kubeSecretKey":  "postgres-password"
             },
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "wow",
                 "secretName": "passwords",
                 "dbservice":  "pgadmin",
