--- a/templates/skadmin/initialLoad/tapis-streams-secrets.j2
+++ b/templates/skadmin/initialLoad/tapis-streams-secrets.j2
@@ -2,7 +2,7 @@
     "secrets": {
         "servicepwd":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "streams",
                 "secretName": "password",
                 "password":   "<generate-secret>",
@@ -12,7 +12,7 @@
         ],
         "user":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "admin",
                 "secretName": "secrets",
                 "key":        "chords-api-key",
@@ -23,7 +23,7 @@
         ],
         "dbcredential":[
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "admin",
                 "secretName": "passwords",
                 "dbservice":  "influx",
@@ -34,7 +34,7 @@
                 "kubeSecretKey":  "influx-password"
             },
             {
-                "tenant":     "admin",
+                "tenant":     "{{universal_param["service_tenant_id"]}}",
                 "user":       "admin",
                 "secretName": "passwords",
                 "dbservice":  "mysql",
