--- a/templates/proxy/nginx/nginx.j2
+++ b/templates/proxy/nginx/nginx.j2
@@ -291,5 +291,14 @@ http {
             proxy_set_header Host $host;
         }
         {% endif %}
+        {% if "notifications" in service_list %}
+        location /v3/notifications
+        {
+    #        auth_request /_auth;
+            proxy_pass http://notifications-api:8080;
+            proxy_redirect off;
+            proxy_set_header Host localhost:5000;
+        }
+        {% endif %}
     }
 }
