--- a/templates/proxy/nginx/nginx.j2
+++ b/templates/proxy/nginx/nginx.j2
@@ -44,7 +44,7 @@ http {
     
         # Edit the server_name to reflect the site domain.
         #server_name *.develop.tapis.io;
-        server_name  {{service_param["nginx_server_name"]}}
+        server_name  {{service_param["nginx_server_name"]}};
         #server_name *.*.tapis.io;
         #server_name  _;
     
