removed most defaults.yml values and references

--- a/templates/actors/api/events.j2
+++ b/templates/actors/api/events.j2
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: actors-events
-        image: abaco/core-v3:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: abaco/core-v3:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         {% if local_param["image_pull"]%}
         imagePullPolicy: Always
         {% endif %}
