--- a/templates/authenticator/api/api.j2
+++ b/templates/authenticator/api/api.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: authenticator-api
-        image: tapis/authenticator:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/authenticator:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
 #        command: ["sleep", "9999999999"]
         imagePullPolicy: Always
         ports:
