--- a/templates/jobs/readers/jobrdr-DeadLetter.j2
+++ b/templates/jobs/readers/jobrdr-DeadLetter.j2
@@ -15,7 +15,7 @@ spec:
       automountServiceAccountToken: false
       containers:
       - name: jobs-rdr-deadletter
-        image: tapis/jobsworker:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/jobsworker:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         {% if local_param["memory"]%}
         resources:
