--- a/templates/pgrest/postgres-deploy.j2
+++ b/templates/pgrest/postgres-deploy.j2
@@ -35,4 +35,4 @@ spec:
       volumes:
       - name: pgrest-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
+          claimName: {{service_param["postgres_pvc"]}}
