--- a/templates/skadmin/sk-admin-init.j2
+++ b/templates/skadmin/sk-admin-init.j2
@@ -12,7 +12,7 @@ spec:
       - name: sk-admin-init
         #command: ["sleep","3600"]
         command: ["/tmp/run-sk-admin"]
-        image: tapis/securityadmin:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/securityadmin:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         env:
         #- name: KUBE_TOKEN
