--- a/templates/systems/api/api.j2
+++ b/templates/systems/api/api.j2
@@ -18,7 +18,7 @@ spec:
       {% endif%}
       containers:
       - name: systems-api
-        image: tapis/systems:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/systems:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         {% if local_param["memory"]%}
         resources:
