--- a/templates/actors/api/mongo-pvc.j2
+++ b/templates/actors/api/mongo-pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["mongo_pvc"]|default(defaults["mongo_pvc"])}}
+  name: {{service_param["mongo_pvc"]}}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -35,5 +35,5 @@ spec:
       volumes:
       - name: actors-mongo-data
         persistentVolumeClaim:
-          claimName: {{service_param["mongo_pvc"]|default(defaults["mongo_pvc"])}}
+          claimName: {{service_param["mongo_pvc"]}}
 
