--- a/templates/actors/backup/actors-mongo-backup.j2
+++ b/templates/actors/backup/actors-mongo-backup.j2
@@ -36,10 +36,10 @@ spec:
                   name: tapis-abaco-secrets
                   key: mongo-password
           volumeMounts:
-            - name: {{service_param["mongo_backup_pvc"]|default(defaults["mongo_backup_pvc"])}}
+            - name: {{service_param["mongo_backup_pvc"]}}
               mountPath: /backup/
       volumes:
-        - name: {{service_param["mongo_backup_pvc"]|default(defaults["mongo_backup_pvc"])}}
+        - name: {{service_param["mongo_backup_pvc"]}}
           persistentVolumeClaim:
-            claimName: {{service_param["mongo_backup_pvc"]|default(defaults["mongo_backup_pvc"])}}
+            claimName: {{service_param["mongo_backup_pvc"]}}
 
