--- a/templates/authenticator/postgres/deploy.j2
+++ b/templates/authenticator/postgres/deploy.j2
@@ -35,5 +35,5 @@ spec:
       volumes:
       - name: authenticator-pg-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
+          claimName: {{service_param["postgres_pvc"]}}
 
