--- a/templates/authenticator/postgres/pvc.j2
+++ b/templates/authenticator/postgres/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
+  name: {{service_param["postgres_pvc"]}}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -33,7 +33,7 @@ spec:
      volumes:
      - name: authenticator-pg-data
        persistentVolumeClaim:
-         claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
+         claimName: {{service_param["postgres_pvc"]}}
 
 ---
 apiVersion: batch/v1
@@ -59,5 +59,5 @@ spec:
      volumes:
      - name: authenticator-pg-data
        persistentVolumeClaim:
-         claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
+         claimName: {{service_param["postgres_pvc"]}}
 {%endif%}
