--- a/templates/files/workers.j2
+++ b/templates/files/workers.j2
@@ -60,7 +60,7 @@ spec:
                 secretKeyRef:
                   name: tapis-files-secrets
                   key: service-password
-          image: tapis/tapis-files-workers:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+          image: tapis/tapis-files-workers:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
           {% if local_param["memory"]%}
           resources:
             requests:
