--- a/templates/jobs/api/api.j2
+++ b/templates/jobs/api/api.j2
@@ -19,7 +19,7 @@ spec:
       {% endif %}
       containers:
       - name: jobs-api
-        image: tapis/jobsapi:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/jobsapi:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         {% if local_param["memory"]%}
         resources:
