--- a/templates/meta/backup/mongo-backup-deployment.j2
+++ b/templates/meta/backup/mongo-backup-deployment.j2
@@ -36,9 +36,9 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               value: restheart
           volumeMounts:
-            - name: {{service_param["mongo_backup_pvc"]|default(defaults["mongo_backup_pvc"])}}
+            - name: {{service_param["mongo_backup_pvc"]}}
               mountPath: /backup/
       volumes:
-        - name: {{service_param["mongo_backup_pvc"]|default(defaults["mongo_backup_pvc"])}}
+        - name: {{service_param["mongo_backup_pvc"]}}
           persistentVolumeClaim:
             claimName: mongo-backup-claim0
