--- a/templates/monitoring/apps/elasticsearch.j2
+++ b/templates/monitoring/apps/elasticsearch.j2
@@ -37,5 +37,5 @@ spec:
       volumes:
       - name: elasticsearch-data
         persistentVolumeClaim:
-          claimName: {{service_param["elastic_pvc"]|default(defaults["elastic_pvc"])}}
+          claimName: {{service_param["elastic_pvc"]}}
       {% endif %}
