--- a/templates/pgrest/api-deploy.j2
+++ b/templates/pgrest/api-deploy.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       initContainers: 
       - name: pgrest-api-migrate
-        image: tapis/pgrest-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/pgrest-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         command: ["python", "/home/tapis/manage.py", "migrate_schemas", "--shared"]
         env:
@@ -38,7 +38,7 @@ spec:
       
       containers:
       - name: pgrest-api
-        image: tapis/pgrest-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/pgrest-api:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         command: ["/usr/local/bin/uwsgi", "--ini", "paas/uwsgi.ini"]
         ports:
