--- a/templates/security/api/api.j2
+++ b/templates/security/api/api.j2
@@ -34,7 +34,7 @@ spec:
       {% endif %}
       containers:
       - name: sk-api
-        image: tapis/securityapi:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: tapis/securityapi:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         imagePullPolicy: Always
         {% if local_param["memory"]%}
         resources:
