--- a/templates/streams/api/deploy.yml.j2
+++ b/templates/streams/api/deploy.yml.j2
@@ -38,4 +38,4 @@ spec:
       volumes:
       - name: influx-data
         persistentVolumeClaim:
-          claimName: {{service_param["influx_pvc"]|default(defaults["influx_pvc"])}}
+          claimName: {{service_param["influx_pvc"]}}
