--- a/templates/streams/influx/deploy.j2
+++ b/templates/streams/influx/deploy.j2
@@ -43,4 +43,4 @@ spec:
       volumes:
       - name: influx-data
         persistentVolumeClaim:
-          claimName: {{service_param["influx_pvc"]|default(defaults["influx_pvc"])}}
+          claimName: {{service_param["influx_pvc"]}}
