--- a/templates/streams/influx/pvc.j2
+++ b/templates/streams/influx/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["influx_pvc"]|default(defaults["influx_pvc"])}}
+  name: {{service_param["influx_pvc"]}}
 spec:
   accessModes:
     - ReadWriteOnce
