--- a/templates/streams/kapacitor/pvc.j2
+++ b/templates/streams/kapacitor/pvc.j2
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{service_param["kapacitor_pvc"]|default(defaults["kapacitor_pvc"])}}
+  name: {{service_param["kapacitor_pvc"]}}
 
 spec:
   accessModes:
@@ -35,5 +35,5 @@ spec:
       volumes:
       - name: streams-kapacitor-data
         persistentVolumeClaim:
-          claimName: {{service_param["kapacitor_pvc"]|default(defaults["kapacitor_pvc"])}}
+          claimName: {{service_param["kapacitor_pvc"]}}
 
