--- a/templates/streams/mysql/deploy.j2
+++ b/templates/streams/mysql/deploy.j2
@@ -36,4 +36,4 @@ spec:
       volumes:
       - name: streams-mysql-data
         persistentVolumeClaim:
-          claimName: {{service_param["mysql_pvc"]|default(defaults["mysql_pvc"])}}
+          claimName: {{service_param["mysql_pvc"]}}
