--- a/templates/tenants/postgres/deploy.j2
+++ b/templates/tenants/postgres/deploy.j2
@@ -35,4 +35,4 @@ spec:
       volumes:
       - name: tenants-pg-data
         persistentVolumeClaim:
-          claimName: {{service_param["postgres_pvc"]|default(defaults["postgres_pvc"])}}
+          claimName: {{service_param["postgres_pvc"]}}
