--- a/templates/vault/vault-init.j2
+++ b/templates/vault/vault-init.j2
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: vault
-        image: vault:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default(defaults["image_version"])))}}
+        image: vault:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
         command: ['vault','server','-config=/vault/config']
         ports:
         - name: vault
@@ -42,6 +42,6 @@ spec:
           name: vaultconf
       - name: vault-data
         persistentVolumeClaim:
-          claimName: {{service_param["pvc"]|default(defaults["pvc"])}}
+          claimName: {{service_param["pvc"]}}
 
 
