set use_sk=true everywhere

--- a/templates/input_template.j2
+++ b/templates/input_template.j2
@@ -932,7 +932,7 @@ tokens:
     file_ext: ".yml"
     template: tokens-config.j2
     data:
-      "use_sk": false
+      "use_sk": true
       "tenants": ["dev", "admin"]
       "log_level": "DEBUG"
       "show_traceback": false
