--- a/templates/associate_template.j2
+++ b/templates/associate_template.j2
@@ -796,7 +796,7 @@ tokens:
     file_ext: ".yml"
     template: tokens-config.j2
     data:
-      "use_sk": false
+      "use_sk": true
       "tenants": ["dev", "admin"]
       "log_level": "DEBUG"
       "show_traceback": false
