--- a/templates/actors/api/reg.j2
+++ b/templates/actors/api/reg.j2
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: actors-reg
         image: abaco/core-v3:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
-        {% if local_param["image_pull"]%}
+        {% if local_param["image_pull"] | default(None)%}
         imagePullPolicy: Always
         {% endif %}
         ports:
