--- a/templates/actors/api/admin.j2
+++ b/templates/actors/api/admin.j2
@@ -14,10 +14,8 @@ spec:
     spec:
       containers:
       - name: actors-admin
-        image: abaco/core-v3:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]))}}
-        {% if local_param["image_pull"]%}
-        imagePullPolicy: Always
-        {% endif %}
+        image: abaco/core-v3:{{actors_image_version}}
+        imagePullPolicy: {{actors_image_pull_policy}}
         ports:
         - name: flask
           containerPort: 5000
